feat: location-service bootstrap & proto integration

--- a/firmware/receiver/components/proto_c/CMakeLists.txt
+++ b/firmware/receiver/components/proto_c/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "messages.pb-c.c" INCLUDE_DIRS . PRIV_REQUIRES protobuf-c)
+idf_component_register(SRCS "schema.pb-c.c" INCLUDE_DIRS . PRIV_REQUIRES protobuf-c)
