--- a/location-service/gradle.properties
+++ b/location-service/gradle.properties
@@ -1,5 +1,7 @@
 ktor_version=2.0.1
 kotlin_version=1.6.21
-logback_version=1.2.3
+logback_version=1.2.11
 kotlinx_serialization_version=1.3.3
+exposed_version=0.38.2
+h2_version=2.1.212
 kotlin.code.style=official
