--- a/location-service/gradle.properties
+++ b/location-service/gradle.properties
@@ -4,4 +4,5 @@ logback_version=1.2.11
 kotlinx_serialization_version=1.3.3
 exposed_version=0.38.2
 h2_version=2.1.212
+trilateration_version=1.0.2
 kotlin.code.style=official
